@@ -9,6 +9,7 @@ import com.cris959.Vacunar_te.model.enums.EstadoCita;
 import com.cris959.Vacunar_te.model.enums.EstadoVacuna;
 import com.cris959.Vacunar_te.repository.CitaVacunacionRepository;
 import com.cris959.Vacunar_te.repository.CiudadanoRepository;
+import com.cris959.Vacunar_te.repository.VacunaRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,46 +24,40 @@ public class CitaVacunacionService {
 
     private final CiudadanoRepository ciudadanoRepository;
 
-    public CitaVacunacionService(CitaVacunacionRepository citaVacunacionRepository, CiudadanoRepository ciudadanoRepository) {
+    private final VacunaRepository vacunaRepository;
+
+    public CitaVacunacionService(CitaVacunacionRepository citaVacunacionRepository, CiudadanoRepository ciudadanoRepository, VacunaRepository vacunaRepository) {
         this.citaVacunacionRepository = citaVacunacionRepository;
         this.ciudadanoRepository = ciudadanoRepository;
+        this.vacunaRepository = vacunaRepository;
     }
 
+    // 1. Valida el historial del ciudadano y programa una nueva cita asignando el refuerzo correspondiente
     @Transactional
     public CitaVacunacion programarCita(int dni, String centro, LocalDateTime fechaPropuesta) {
-        // Truncamos la fecha de entrada apenas llega
-        LocalDateTime fechaLimpia = fechaPropuesta.withNano(0);
-
-        // 1. Verificar si el ciudadano existe
         Ciudadano ciudadano = ciudadanoRepository.findById(dni)
                 .orElseThrow(() -> new CitaInvalidaException("Ciudadano no encontrado. Debe registrarse primero."));
 
-        // 2. Obtener citas previas (que no esten canceladas)
         List<CitaVacunacion> historial = citaVacunacionRepository.findByCiudadanoAndEstadoNotOrderByFechaHoraCitaDesc(
                 ciudadano, EstadoCita.CANCELADA
         );
 
-        // 3. Validar Regla de Tiempo si ya tiene dosis anteriores
         if (!historial.isEmpty()) {
-            CitaVacunacion ultimaCita = historial.getFirst();
+            CitaVacunacion ultimaCita = historial.get(0);
             long diasTranscurridos = ChronoUnit.DAYS.between(ultimaCita.getFechaHoraCita(), fechaPropuesta);
 
-            // Regla: Minimo 4 semanas (28 dias)
             if (diasTranscurridos < 28) {
-                throw new CitaInvalidaException("No han pasado las 4 semanas mínimas requeridas desde la última dosis (" + diasTranscurridos + " días transcurridos).");
+                throw new CitaInvalidaException("No han pasado las 4 semanas minimas requeridas (" + diasTranscurridos + " dias).");
             }
         }
 
-        // 4. Crear y Guardar la Cita
         CitaVacunacion nuevaCita = new CitaVacunacion();
         nuevaCita.setCiudadano(ciudadano);
         nuevaCita.setCentroVacunacion(centro);
         nuevaCita.setFechaHoraCita(fechaPropuesta.withNano(0));
         nuevaCita.setEstado(EstadoCita.PROGRAMADA);
 
-        // 5. ASIGNAR EL ENUM DE REFUERZO (Solucion al error Column 'cod_refuerzo' cannot be null)
         int dosisAnteriores = historial.size();
-
         if (dosisAnteriores == 0) {
             nuevaCita.setCodRefuerzo(DosisRefuerzo.PRIMERA);
         } else if (dosisAnteriores == 1) {
@@ -74,31 +69,27 @@ public class CitaVacunacionService {
         return citaVacunacionRepository.save(nuevaCita);
     }
 
+    // 2. Desplaza las citas programadas de un centro especifico por un periodo de 14 dias ante falta de insumos
     @Transactional
     public int postergarCitasPorFaltaDeStock(String centro) {
-        // 1. Buscamos todas las citas que estan programadas para ese centro
         List<CitaVacunacion> citasAPostergar = citaVacunacionRepository.findByCentroVacunacionAndEstado(
                 centro, EstadoCita.PROGRAMADA
         );
 
         if (citasAPostergar.isEmpty()) {
-            return 0; // No habia citas para postergar
+            return 0;
         }
 
-        // 2. Aplicamos la postergacion de 14 dias a cada una
         for (CitaVacunacion cita : citasAPostergar) {
-            LocalDateTime nuevaFecha = cita.getFechaHoraCita().plusDays(14);
-
-            cita.setFechaHoraCita(nuevaFecha);
-            cita.setEstado(EstadoCita.POSTERGADA); // Cambiamos el estado para auditoria
+            cita.setFechaHoraCita(cita.getFechaHoraCita().plusDays(14));
+            cita.setEstado(EstadoCita.POSTERGADA);
         }
 
-        // 3. Guardamos los cambios (Spring Data JPA sincroniza automaticamente por @Transactional)
         citaVacunacionRepository.saveAll(citasAPostergar);
-
         return citasAPostergar.size();
     }
 
+    // 3. Registra la aplicacion efectiva de la dosis vinculando la vacuna y actualizando el estado de ambos registros
     @Transactional
     public void registrarVacunacionEfectiva(int codCita, Vacuna vacunaAsignada) {
         CitaVacunacion cita = citaVacunacionRepository.findById(codCita)
@@ -108,15 +99,12 @@ public class CitaVacunacionService {
             throw new CitaInvalidaException("Esta cita ya fue marcada como cumplida anteriormente.");
         }
 
-        // Actualizamos los datos de la cita
         cita.setFechaHoraColoca(LocalDateTime.now());
         cita.setVacuna(vacunaAsignada);
         cita.setEstado(EstadoCita.CUMPLIDA);
-
-        // IMPORTANTE: Tambien debemos actualizar el estado de la VACUNA
-        // (Recuerda que creamos el Enum EstadoVacuna anteriormente)
         vacunaAsignada.setEstado(EstadoVacuna.APLICADA);
 
+        vacunaRepository.save(vacunaAsignada);
         citaVacunacionRepository.save(cita);
     }
 }
